# ML-in-Production-From-Data-Scientist-to-ML-Engineer

./: .gitignore  IPL_Predictions.csv  Makefile  README.md  Solution_Sheet.docx  collection.py  config.py  db_model.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
app/: runner.py
app/config/: config.py  db_config.py  logger_config.py  model_config.py
app/database/: Data.xlsx  Flipr 7.0.ipynb  data_as_csv.csv  db_model.py
app/model/: model_service.py
app/model/pipeline/: collection.py  model.py  preparation.py
models/: xgr_v1
